correct working with photo