@@ -6,11 +6,10 @@ import com.sun.istack.NotNull;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
-import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Base64;
 
 @Service
 public class StorageService {
@@ -27,7 +26,7 @@ public class StorageService {
     public void uploadFile(@NotNull String keyName, @NotNull String data) {
         try {
             Path uploadFilePath = Files.createTempFile(keyName, "jpg");
-            byte[] bytes = DatatypeConverter.parseBase64Binary(data);
+            byte[] bytes = Base64.getDecoder().decode(data);
             Files.write(uploadFilePath, bytes);
             client.putObject(bucketName, keyName, uploadFilePath.toFile());
         } catch (IOException ignored) {}
@@ -35,9 +34,8 @@ public class StorageService {
 
     public byte[] downloadFile(@NotNull String keyName) {
         S3Object object = client.getObject(bucketName, keyName);
-        InputStream data = object.getObjectContent();
         try {
-            return data.readAllBytes();
+            return object.getObjectContent().readAllBytes();
         } catch (IOException ignored) {}
         return null;
     }
